[package]
name = "ssri-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
ckb-jsonrpc-types = "0.118.0"
ckb-sdk = "3.4.1"
ckb-types = "0.118.0"
ckb-hash = "0.118.0"
ckb-vm = "0.24.9"
hex = { version = "0.4.3", features = ["serde"] }
jsonrpc-core = "18.0.0"
jsonrpsee = { version = "0.24.7", features = ["server", "macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
tokio_with_wasm = { version = "0.7.4", features = ["rt"] }
tokio = { version = "1.42.0", features = ["rt", "macros", "signal"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ['full'] }
hyper = { version = "1.5.2" }
tower = { version = "0.4.13", features = ['full'] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4"
log = "0.4"
wasm-logger = "0.2"
getrandom = { version = "0.2", features = ["js"] }
mio = "1.0.3"